# mnyaml

./: .gitignore  COPYING  README.md  configure.ac  do-it  setup-env
man/: Makefile.am
port/: Makefile.in  distinfo  pkg-descr
src/: Makefile.am  mnyaml.c  mnyaml.h  mnyaml_private.h  mrkyaml.c  mrkyaml.h  mrkyaml_private.h
test/: Makefile.am  testfoo.c  unittest.h
